src/objects/inscor__Contract_Entry__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Entries</relationshipLabel>
        <relationshipName>Contract_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Contract Entry</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Contract__c</columns>
        <columns>inscor__Entry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{0}</displayFormat>
        <label>Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>